--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,9 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap");
 
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@font-face {
-  font-family: "Amidone" ;
-  src: url("../assets/fonts/AmidoneGrotesk.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
 
 * {
   margin: 0;
@@ -19,34 +11,14 @@
   box-sizing: border-box;
 }
 
-body {
-  color: white;
-  width: 100dvw;
-  overflow-x: hidden;
+html, body, #root {
   height: 100%;
-  background: #000;
-  border-color: #3b3b3b;
-  user-select: none;
+  background-color: black;
 }
 
-canvas {
-  touch-action: none;
+@font-face {
+  font-family: "Amidone" ;
+  src: url("../assets/fonts/AmidoneGrotesk.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
-
-.screen-max-width {
-  margin-inline-start: auto;
-  margin-inline-end: auto;
-  position: relative;
-  max-width: 1120px;
-}
-
-@layer utilities {
-  .flex-center {
-    @apply flex items-center justify-center
-  }
-
-  .nav-height {
-    @apply h-[calc(100vh-60px)]
-  }
-}
-
