--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 * {
   margin: 0;
@@ -19,7 +18,7 @@ html, body, #root {
 
 @font-face {
   font-family: "Amidone" ;
-  src: url("../assets/fonts/AmidoneGrotesk.ttf") format("truetype");
+  src: url("./assets/fonts/AmidoneGrotesk.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
